[project]
name = "dnaisland"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pillow>=12.3.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
# 生产 WSGI 服务器：Linux/macOS 用 gunicorn，Windows 用 waitress
# 安装： uv sync --extra prod   或   pip install ".[prod]"
prod = [
    "gunicorn>=23.0.0 ; sys_platform != 'win32'",
    "waitress>=3.0.0 ; sys_platform == 'win32'",
]
